--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.scss
@@ -314,6 +314,7 @@ $profile-form-field-mt: 30px;
 
               & .skil-height-fix {
                 overflow: hidden;
+                max-height: 30px;
 
                 &.skill-more-height {
                   max-height: 153px;
