--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -72,7 +72,6 @@
             </simple-tag>
           </div>
         </div>
-        <!-- this.positionName[0].true_fitscore_info.education_weight -->
         <div  *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
           <h5>Qualification Level Estimate Breakdown</h5>
         <div class="position-qualification-skills" *ngFor="let score of positionName" >
@@ -102,6 +101,11 @@
     </div>
       <div id="matched-skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
         <div class="row position-required-skills-detail main-card">
+            <div class="show-button">
+                <action-button  type="text" title="{{!showMoreFlag ? 'See All' :
+                    'See Less'}}" color="primary" (click)="showMoreFlag = !showMoreFlag"
+                  *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
+              </div>
           <h3>Matched Skills</h3>
           <ul>
             <li>
@@ -109,17 +113,12 @@
                   *ngIf="matchedSkills?.length > 0">{{ matchedSkills?.length}}</span>
               </h5>
               <div *ngIf="matchedSkills?.length; else noSkill">
-                <div class="skil-height-fix" *ngIf="displayItemsLimit; let limit">
+                <div class="skil-height-fix"[ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m green-color-tag"
                     *ngFor="let matchSkill of matchedSkills; let i = index; ">
                     <simple-tag type="green" *ngIf="i < limit" title="{{matchSkill.skill}}">
                     </simple-tag>
                   </div>
-                  <img *ngIf="lessFlag && limit > displayItemsLimit && matchedSkills?.length > displayItemsLimit"
-                    class="edu_img" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg"
-                    alt="See Less">
-                  <img *ngIf="limit < matchedSkills?.length" class="edu_img" (click)="limit = limit + displayItemsLimit"
-                    (click)="lessFlag = true" src="assets/icons/ic_see_more.svg" alt="See More">
                 </div>
               </div>
             </li>
@@ -128,16 +127,11 @@
                   *ngIf="missingSkills?.length > 0">{{ missingSkills?.length}}</span>
               </h5>
               <div *ngIf="missingSkills?.length; else noSkill">
-                <div class="skil-height-fix" *ngIf="displayItemsLimit; let limit">
+                <div class="skil-height-fix"[ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m red-color-tag" *ngFor="let skill of missingSkills ; let i = index; ">
                     <simple-tag type="red" *ngIf="i < limit" title="{{skill.skill}}">
                     </simple-tag>
                   </div>
-                  <img *ngIf="lessFlag && limit > displayItemsLimit && missingSkills?.length > displayItemsLimit"
-                    class="edu_img" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg"
-                    alt="See Less">
-                  <img *ngIf="limit < missingSkills?.length" class="edu_img" (click)="limit = limit + displayItemsLimit"
-                    (click)="lessFlag = true" src="assets/icons/ic_see_more.svg" alt="See More">
                 </div>
               </div>
               <ng-template #noSkill>
