--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.scss
@@ -469,11 +469,36 @@ $profile-form-field-mt: 30px;
 
             & .skil-height-fix {
               overflow: hidden;
+              max-height: 30px;
 
               &.skill-more-height {
                 max-height: 153px;
               }
             }
+          }
+        }
+      }
+      & .show-button {
+        text-align: center;
+
+        action-button {
+          display: inline-block;
+          position: relative;
+          cursor: pointer;
+          &::after {
+            position: absolute;
+            right: -47px;
+            color: rgba(0, 29, 64, 0.1);
+            height: 100%;
+            width: 100%;
+            content: "|";
+            top: 20px;
+          }
+          &:last-child::after {
+            display: none;
+          }
+          &:focus {
+            outline: none;
           }
         }
       }
