--- a/client/src/app/components/request-response-popup/request-response-popup.component.html
+++ b/client/src/app/components/request-response-popup/request-response-popup.component.html
@@ -4,8 +4,10 @@
     <h4>Loading...</h4>
   </div>
 </ng-container>
-<div class="profile-form" [formGroup]="searchForm">
 
+<div class="profile-form" [formGroup]="searchForm">
+    <div class="application-references refer-pop-app">
+    <h1 class="title">References</h1>
   <div class="profile-form__field search">
     <mat-form-field appearance="standard" class="search">
       <mat-icon matSuffix>search</mat-icon>
@@ -21,10 +23,9 @@
       </mat-autocomplete>
     </mat-form-field>
   </div>
-</div>
-<div class="application-references refer-pop-app">
+
+
   <mat-icon class="cancel" (click)="onClose()">cancel</mat-icon>
-  <h1 *ngIf="userContactList.length > 0" class="title">References</h1>
   <div class="people-list-container">
     <ng-container>
       <div *ngFor="let user of userContactList; let i = index;">
@@ -40,7 +41,7 @@
               <action-button class="contact-btn" type="flat" color="primary" title={{user.status}}
                 (click)="sendReferenceRequest(i,user)" disabled="{{user.status === 'Sent'}}">
               </action-button>
-              <action-button class="contact-btn" type="flat" color="primary" title="Cancel"
+              <action-button class="contact-btn1" type="flat" color="primary" title="Cancel"
                 (click)="deleteContactRequest(i)" color="warn">
               </action-button>
             </div>
@@ -49,4 +50,5 @@
       </div>
     </ng-container>
   </div>
+</div>
 </div>
