--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -19,41 +19,40 @@
         <div>
           <h1>{{generalInfo?.first_name}} {{generalInfo?.last_name}}</h1>
         </div>
-        <div class="user-info">
-          <ul>
-            <li *ngIf="generalInfo?.city || generalInfo?.state || generalInfo?.country">
-              <small>
-                <img src="assets/icons/ic_location.svg">
+        <div class="profile-info">
+
+          <div class="profile-box">
+            <div class="profile-text" *ngIf="generalInfo?.city || generalInfo?.state || generalInfo?.country">
+              <img _ngcontent-aag-c11="" src="assets/icons/ic_location.svg">
+              <p>
                 {{(generalInfo.city ? generalInfo.city : '') + (generalInfo.city && (generalInfo.state || generalInfo.country) ? ', ' : '') + (generalInfo.state ? generalInfo.state : '') + (generalInfo.state && generalInfo.country ? ', ' : '') + (generalInfo.country ? generalInfo.country : '')}}
-              </small>
-            </li>
-            <li *ngIf="generalInfo?.birthdate">
-              <small >
-                <img src="assets/icons/ic_birthday-cake.svg">
-                {{helperService.convertToFormattedString(generalInfo.birthdate, 'll')}}
-              </small>
-            </li>
-            <li *ngIf="generalInfo?.gender">
-              <small >
-                <img
-                  src="{{generalInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
-                {{generalInfo.gender}}
-              </small>
-            </li>
-            <li *ngIf="generalInfo?.ethnicity">
-              <small >
-                <label>Ethnicity</label>
-                {{generalInfo.ethnicity}}
-              </small>
-            </li>
-            <li>
-              <small>
-                <label>Email Verified</label>
-                <img class="valid" src="assets/icons/ic_checkbox_checked.svg">
-              </small>
-            </li>
-          </ul>
+              </p>
+            </div>
+
+            <div class="profile-text" *ngIf="generalInfo?.birthdate">
+              <img src="assets/icons/ic_birthday-cake.svg">
+              <p>{{helperService.convertToFormattedString(generalInfo.birthdate, 'll')}}
+              </p>
+            </div>
+          </div>
+
+          <div class="profile-box">
+            <div class="profile-text" *ngIf="generalInfo?.gender">
+              <img src="{{generalInfo.gender === 'Male' ? 'assets/icons/ic_male.svg' : 'assets/icons/ic_female.svg'}}">
+              <p>{{generalInfo.gender}}</p>
+            </div>
+
+            <div class="profile-text">
+              <label>Email Verified</label>
+              <img class="valid" src="assets/icons/ic_checkbox_checked.svg">
+            </div>
+          </div>
+
+
         </div>
+
+
+
       </div>
       <div class="user-status">
         <simple-tag [title]="profileStatuses[generalInfo?.is_looking]" onlineTag="true" type="gray"
@@ -63,49 +62,51 @@
   </div>
   <div class="position-list-container">
     <div>
-      <div class="row position-qualification-detail" id="qualification-level" >
+      <div class="row position-qualification-detail" id="qualification-level">
         <h3>Qualification Level Estimate Breakdown</h3>
         <div class="heading-row">
           <h5>Candidate Qualification Level Estimate</h5>
           <div *ngFor="let level of positionName">
-            <simple-tag type="gray"  title="{{calculateQualificationLevel(level.true_fitscore_info, level.minimum_skills)}}">
+            <simple-tag type="gray"
+              title="{{calculateQualificationLevel(level.true_fitscore_info, level.minimum_skills)}}">
             </simple-tag>
           </div>
         </div>
-        <div  *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
+        <div
+          *ngIf=" positionName[0]?.minimum_skills?.length > 0 || positionName[0]?.true_fitscore_info?.skills_weight > 0 || positionName[0]?.true_fitscore_info?.education_weight > 0 || positionName[0]?.true_fitscore_info?.experience_weight > 0 || positionName[0]?.true_fitscore_info?.interests_weight > 0 ">
           <h5>Qualification Level Estimate Breakdown</h5>
-        <div class="position-qualification-skills" *ngFor="let score of positionName" >
-          <div >
-          <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match" ellipseTag="true"
-            value="{{mathFloor(6*score.true_fitscore_info?.skills_fitscore)}}">
-          </simple-tag>
-          <simple-tag *ngIf="score.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
-            value="{{mathFloor(6*score.true_fitscore_info?.required_skills_fitscore)}}">
-          </simple-tag>
-          <simple-tag *ngIf="score.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
-            ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.experience_fitscore)}}">
-          </simple-tag>
-          <simple-tag *ngIf="score.true_fitscore_info?.education_weight" type="gray" title="Education Match"
-            ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.education_fitscore)}}">
-          </simple-tag>
-          <simple-tag *ngIf="score.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
-            ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.interests_fitscore)}}">
-          </simple-tag>
-          <p
-            *ngIf="!score.true_fitscore_info ||  (score.true_fitscore_info && !score.true_fitscore_info.skills_weight && !score.true_fitscore_info.experience_weight && !score.true_fitscore_info.education_weight && !score.true_fitscore_info.interests_weight && !score.minimum_skills)">
-            N/A
-          </p>
+          <div class="position-qualification-skills" *ngFor="let score of positionName">
+            <div>
+              <simple-tag *ngIf="score.true_fitscore_info?.skills_weight" type="gray" title="Skills Match"
+                ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.skills_fitscore)}}">
+              </simple-tag>
+              <simple-tag *ngIf="score.minimum_skills" type="gray" title="Required Skills Match" ellipseTag="true"
+                value="{{mathFloor(6*score.true_fitscore_info?.required_skills_fitscore)}}">
+              </simple-tag>
+              <simple-tag *ngIf="score.true_fitscore_info?.experience_weight" type="gray" title="Experience Match"
+                ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.experience_fitscore)}}">
+              </simple-tag>
+              <simple-tag *ngIf="score.true_fitscore_info?.education_weight" type="gray" title="Education Match"
+                ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.education_fitscore)}}">
+              </simple-tag>
+              <simple-tag *ngIf="score.true_fitscore_info?.interests_weight" type="gray" title="Interests Match"
+                ellipseTag="true" value="{{mathFloor(6*score.true_fitscore_info?.interests_fitscore)}}">
+              </simple-tag>
+              <p
+                *ngIf="!score.true_fitscore_info ||  (score.true_fitscore_info && !score.true_fitscore_info.skills_weight && !score.true_fitscore_info.experience_weight && !score.true_fitscore_info.education_weight && !score.true_fitscore_info.interests_weight && !score.minimum_skills)">
+                N/A
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-      </div>
-    </div>
       <div id="matched-skills" *ngIf="matchedSkills?.length > 0 || missingSkills?.length > 0">
         <div class="row position-required-skills-detail main-card">
-            <div class="show-button">
-                <action-button  type="text" title="{{!showMoreFlag ? 'See All' :
+          <div class="show-button">
+            <action-button type="text" title="{{!showMoreFlag ? 'See All' :
                     'See Less'}}" color="primary" (click)="showMoreFlag = !showMoreFlag"
-                  *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
-              </div>
+              *ngIf="matchedSkills?.length > 2 || missingSkills?.length > 2"></action-button>
+          </div>
           <h3>Matched Skills</h3>
           <ul>
             <li>
@@ -113,7 +114,8 @@
                   *ngIf="matchedSkills?.length > 0">{{ matchedSkills?.length}}</span>
               </h5>
               <div *ngIf="matchedSkills?.length; else noSkill">
-                <div class="skil-height-fix"[ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="displayItemsLimit; let limit">
+                <div class="skil-height-fix" [ngClass]="{'skill-more-height': showMoreFlag}"
+                  *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m green-color-tag"
                     *ngFor="let matchSkill of matchedSkills; let i = index; ">
                     <simple-tag type="green" *ngIf="i < limit" title="{{matchSkill.skill}}">
@@ -127,7 +129,8 @@
                   *ngIf="missingSkills?.length > 0">{{ missingSkills?.length}}</span>
               </h5>
               <div *ngIf="missingSkills?.length; else noSkill">
-                <div class="skil-height-fix"[ngClass]="{'skill-more-height': showMoreFlag}" *ngIf="displayItemsLimit; let limit">
+                <div class="skil-height-fix" [ngClass]="{'skill-more-height': showMoreFlag}"
+                  *ngIf="displayItemsLimit; let limit">
                   <div class="skills-preferred-m red-color-tag" *ngFor="let skill of missingSkills ; let i = index; ">
                     <simple-tag type="red" *ngIf="i < limit" title="{{skill.skill}}">
                     </simple-tag>
@@ -169,7 +172,8 @@
               (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
           </ng-container>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="education" *ngIf="educationList?.length > 0">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="education"
+          *ngIf="educationList?.length > 0">
           <h3> Education </h3>
           <div class="education-level-m">
             <ng-container *ngFor="let education of educationList; let i = index">
@@ -198,7 +202,8 @@
             </ng-container>
           </div>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="work" *ngIf="experienceList?.length > 0">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="work"
+          *ngIf="experienceList?.length > 0">
           <h3>Work Experience</h3>
           <div class="education-level-m work-section" *ngFor=" let experience of experienceList; let i = index;">
             <h6 for="skill_required">{{experience.user_specified_company_name}}</h6>
@@ -222,8 +227,8 @@
                 </ng-container>
                 <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit"
                   src="assets/icons/ic_see_less.svg" alt="See Less">
-                <img *ngIf="limit < experience.skills_trained.length"
-                  (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+                <img *ngIf="limit < experience.skills_trained.length" (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_see_more.svg" alt="See More">
 
               </div>
             </ng-container>
@@ -235,30 +240,30 @@
                 </simple-tag>
                 <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit"
                   src="assets/icons/ic_see_less.svg" alt="See Less">
-                <img *ngIf="limit < experience.industries.length"
-                  (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+                <img *ngIf="limit < experience.industries.length" (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_see_more.svg" alt="See More">
               </div>
             </ng-container>
             <ng-container *ngIf="experience.add_industries && experience.add_industries?.length > 0">
               <h5> Additional Industry Exposure <span>{{experience.add_industries.length}}</span></h5>
               <div class="skills" *ngIf="displayItemsLimit; let limit">
                 <ng-container *ngFor="let add_industry of experience.add_industries; let i = index;">
-                  <simple-tag *ngIf="(i < limit)" type="gray"
-                    title="{{add_industry.industry_name}}">
+                  <simple-tag *ngIf="(i < limit)" type="gray" title="{{add_industry.industry_name}}">
                   </simple-tag>
                 </ng-container>
                 <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit"
                   src="assets/icons/ic_see_less.svg" alt="See Less">
-                <img *ngIf="limit < experience.add_industries?.length"
-                  (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
-                </div>
-              </ng-container>
-              <mat-divider *ngIf="( i < experienceList.length - 1)"></mat-divider>
+                <img *ngIf="limit < experience.add_industries?.length" (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_see_more.svg" alt="See More">
+              </div>
+            </ng-container>
+            <mat-divider *ngIf="( i < experienceList.length - 1)"></mat-divider>
 
           </div>
 
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="skills" *ngIf="userSkillsList?.length > 0">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="skills"
+          *ngIf="userSkillsList?.length > 0">
           <h3> Skills </h3>
           <img src="assets/icons/ic_question.svg" class="question" (click)="openSkillDescriptionDialog()">
           <div class="education-level-m">
@@ -275,7 +280,8 @@
             </div>
           </div>
         </div>
-        <div class="row position-eductaion-detail position-required-skills-detail" id="interest" *ngIf="interestsList?.length > 0">
+        <div class="row position-eductaion-detail position-required-skills-detail" id="interest"
+          *ngIf="interestsList?.length > 0">
           <h3> Interests </h3>
           <div class="education-level-m">
             <h5>Interests <span> {{ interestsList ? interestsList.length : '0' }}</span></h5>
@@ -343,5 +349,5 @@
         </div>
       </div>
 
+    </div>
   </div>
-</div>
