--- a/client/src/app/pages/application/application-detail/application-header-section/application-header-section.component.scss
+++ b/client/src/app/pages/application/application-detail/application-header-section/application-header-section.component.scss
@@ -56,6 +56,10 @@ $profile-form-field-mt: 30px;
           width: 344px;
           & .top-choice-content {
             p {
+              line-height: 21px;
+              font-weight: 500;
+              font-size: 14px;
+              font-family: "Poppins", sans-serif;
               color: #318bd6;
             }
           }
