Add delete button for position template

--- a/client/src/app/pages/positions/position-templates/position-templates.component.html
+++ b/client/src/app/pages/positions/position-templates/position-templates.component.html
@@ -24,6 +24,8 @@
             </div>
             <div class="template-select">
               <action-button class="select-template" type="flat" color="primary" title="Select Template" (click)="selectTemplate(i)"></action-button>
+
+              <action-button class="select-template" type="flat" color="warn" title="Delete" (click)="deleteTemplate(i)"></action-button>
             </div>
           </div>
 
