--- a/client/src/app/pages/positions/position-templates/position-templates.component.scss
+++ b/client/src/app/pages/positions/position-templates/position-templates.component.scss
@@ -90,8 +90,11 @@ a {
               }
             }
             .template-select {
-              @include flex(column, flex-end, space-between);
-              margin-left: 20px;
+              @include flex(row, center, center);
+              margin-left: 10px;
+              & > * {
+                margin-left: 10px;
+              }
             }
           }
           .sub-container {
