--- a/client/src/app/pages/application/application-detail/application-references/application-references.component.html
+++ b/client/src/app/pages/application/application-detail/application-references/application-references.component.html
@@ -10,7 +10,7 @@
 
     <h1 class="title">References</h1>
     <div class="edit-title">
-        <a (click)="openInterestLevelDialog()">Request Reference</a>
+        <a (click)="openReferenceRequestDialog()">Request Reference</a>
       </div>
     <p>This list of employees/recruiters have vouched for this candidate.</p>
     <div class="references-detail">
