--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -373,45 +373,92 @@
             </li>
           </ul>
           </div>
+
           <div class="row position-required-skills-detail" id="preferred_skills" *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">
-            <h3>Preferred & Required Skills</h3><img class="question-icon" src="assets/icons/ic_question.svg"
-              (click)="openSkillDescriptionDialog()">
+            <h3>Preferred & Required Skills</h3><img class="question-icon" src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()">
             <div class="education-level-m" >
               <h5 for="skill_required">Skills Required <span *ngIf="jobData.minimum_skills?.length > 0">{{ jobData.minimum_skills?.length}}</span>
               </h5>
-              <div *ngIf="jobData.minimum_skills; else noSkill" >
-              <div class="skills" *ngIf="displayItemsLimit; let limit">
-                <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
-                  <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
-                    value="{{min_skill.skill_level}}"  (click)="openSkilladdDialog(min_skill)"
-                    [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
-                    [matTooltipShowDelay]=500 >
-                  </simple-tag>
-                </div>
-                <img *ngIf="limit < jobData.minimum_skills?.length" (click)="limit = limit + displayItemsLimit"
-                  src="assets/icons/ic_more.svg" alt="See More">
+
+              <div *ngIf="jobData.minimum_skills?.length > 0" class="form-field search" [formGroup]="requiredSkillsSearchForm">
+                <mat-form-field appearance="standard" class="search">
+                  <mat-icon matSuffix>search</mat-icon>
+                  <input matInput placeholder="Search required skills" type="text" [matAutocomplete]="autocompleteRequiredSkills" formControlName="required_skill">
+                  <mat-autocomplete #autocompleteRequiredSkills="matAutocomplete">
+                    <mat-option *ngFor="let autocomplete_required_skill of autocomplete_required_skills" [value]="autocomplete_required_skill.skill"
+                      (onSelectionChange)="selectRequiredSkill(autocomplete_required_skill)">
+                      <span>{{autocomplete_required_skill.skill}}</span>
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
               </div>
+
+              <div *ngIf="temp_required_skill" class="temp-skill">
+                <simple-tag type="normal" title="{{temp_required_skill.skill}}" ellipseTag="true"
+                  value="{{temp_required_skill.skill_level}}"  (click)="openSkilladdDialog(temp_required_skill)"
+                  [matTooltip]="SkillLevelDescription[temp_required_skill.skill_level].title + SkillLevelDescription[temp_required_skill.skill_level].description"
+                  [matTooltipShowDelay]=500 >
+                </simple-tag>
+                <mat-icon (click)="skillsSearchDone(false)">cancel</mat-icon>
+              </div>
+              
+              <div *ngIf="jobData.minimum_skills; else noSkill" >
+                <div class="skills" *ngIf="displayItemsLimit; let limit">
+                  <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
+                    <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
+                      value="{{min_skill.skill_level}}"  (click)="openSkilladdDialog(min_skill)"
+                      [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
+                      [matTooltipShowDelay]=500 >
+                    </simple-tag>
+                  </div>
+                  <img *ngIf="limit < jobData.minimum_skills?.length" (click)="limit = limit + displayItemsLimit"
+                    src="assets/icons/ic_more.svg" alt="See More">
+                </div>
               </div>
               <ng-template #noSkill>
-                    <span>N/A</span>
-                </ng-template>
+                <span>N/A</span>
+              </ng-template>
             </div>
+
             <div class="education-level-m">
               <h5 for="skill_required">Skills Preferred <span *ngIf="jobData.preferred_skills?.length > 0">{{ jobData.preferred_skills?.length}}</span>
               </h5>
-              <div *ngIf="jobData.preferred_skills; else noSkill" >
-              <div class="skills" *ngIf="displayItemsLimit; let limit">
-                <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
-                  <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
-                    value="{{preskill.skill_level}}" (click)="openSkilladdDialog(preskill)"
-                    [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
-                    [matTooltipShowDelay]=500 >
-                  </simple-tag>
-                </div>
 
-                <img *ngIf="limit < jobData.preferred_skills?.length" (click)="limit = limit + displayItemsLimit"
-                  src="assets/icons/ic_more.svg" alt="See More">
+              <div *ngIf="jobData.preferred_skills?.length > 0" class="form-field search" [formGroup]="preferredSkillsSearchForm">
+                <mat-form-field appearance="standard" class="search">
+                  <mat-icon matSuffix>search</mat-icon>
+                  <input matInput placeholder="Search preferred skills" type="text" [matAutocomplete]="autocompletePreferredSkills"
+                    formControlName="preferred_skill">
+                  <mat-autocomplete #autocompletePreferredSkills="matAutocomplete">
+                    <mat-option *ngFor="let autocomplete_preferred_skill of autocomplete_preferred_skills" [value]="autocomplete_preferred_skill.skill"
+                      (onSelectionChange)="selectPreferredSkill(autocomplete_preferred_skill)">
+                      <span>{{autocomplete_preferred_skill.skill}}</span>
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
               </div>
+
+              <div *ngIf="temp_preferred_skill" class="temp-skill">
+                <simple-tag type="gray" title="{{temp_preferred_skill.skill}}" ellipseTag="true"
+                  value="{{temp_preferred_skill.skill_level}}"  (click)="openSkilladdDialog(temp_preferred_skill)"
+                  [matTooltip]="SkillLevelDescription[temp_preferred_skill.skill_level].title + SkillLevelDescription[temp_preferred_skill.skill_level].description"
+                  [matTooltipShowDelay]=500 >
+                </simple-tag>
+                <mat-icon (click)="skillsSearchDone(true)">cancel</mat-icon>
+              </div>
+
+              <div *ngIf="jobData.preferred_skills; else noSkill" >
+                <div class="skills" *ngIf="displayItemsLimit; let limit">
+                  <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
+                    <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
+                      value="{{preskill.skill_level}}" (click)="openSkilladdDialog(preskill)"
+                      [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
+                      [matTooltipShowDelay]=500 >
+                    </simple-tag>
+                  </div>
+
+                  <img *ngIf="limit < jobData.preferred_skills?.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_more.svg" alt="See More">
+                </div>
               </div>
             </div>
           </div>
