--- a/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
+++ b/client/src/app/pages/profile/user-profile/header-section/header-section.component.html
@@ -53,7 +53,7 @@
         </div>
       </div>
       <div class="user-status">
-        <simple-tag  [title]="profileStatuses[generalInfo.is_looking]" onlineTag="true" [active]="generalInfo.is_looking === 1" (click)="onChangeProfileStatus(generalInfo.is_looking === 1)"></simple-tag>
+        <simple-tag  [title]="profileStatuses[generalInfo.is_looking]" *ngIf="showBackButtonFlag === false" onlineTag="true" [active]="generalInfo.is_looking === 1" (click)="onChangeProfileStatus(generalInfo.is_looking === 1)"></simple-tag>
         <action-button *ngIf="userId && contact_status" type="stroked" [title]="contactBtnTitle()" (click)="onClickContactBtn()"></action-button>
       </div>
     </ng-container>
