--- a/client/src/app/pages/application/application-search-page/applications.component.html
+++ b/client/src/app/pages/application/application-search-page/applications.component.html
@@ -244,7 +244,7 @@
               <button mat-button [matMenuTriggerFor]="menu" disableRipple><img src="assets/icons/ic_more_vertical.svg">
               </button>
               <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink="../application/{{this.appliedJobsMap[application.position_id]}}">See
+                <button mat-menu-item (click)="routerNavigate(application.application_id,application.position_id)">See
                   Application</button>
                 <button mat-menu-item (click)="withdrawApplication([application])">Withdraw
                   Application</button>
